poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll
  labels:
    name: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      name: poll
  template:
    metadata:
      labels:
        name: poll
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: redis
        image: epitechcontent/t-dop-600-poll:k8s
        name: poll
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 128Mi
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - result
            topologyKey: kubernetes.io/hostname
      restartPolicy: Always
status: {}
