redis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
    spec:
      containers:
      - image: redis:5.0
        name: redis
        resources: {}
      restartPolicy: Always
status: {}
