redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: redis
    spec:
      containers:
      - image: redis
        name: redis
        ports:
        - containerPort: 6379
      restartPolicy: Always
status: {}
