worker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: postgres
        - name: POSTGRES_DNS
          value: postgres
        - name: POSTGRES_PASSWORD
          value: password
        - name: POSTGRES_USER
          value: postgres
        - name: REDIS_HOSTNAME
          value: redis
        - name: REDIS_PORT
          value: "80"
        image: worker
        name: worker
        resources: {}
      restartPolicy: Always
status: {}
