poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll
spec:
  ports:
  - protocol: TCP
    name: "5000"
    port: 5000
    targetPort: 80
  selector:
    name: poll
