redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  selector:
    name: redis
  type: ClusterIP
