result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  ports:
  - name: "5001"
    port: 5001
    targetPort: 80
status:
  loadBalancer: {}
