result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  ports:
  - protocol: TCP
    name: "5001"
    port: 5001
    targetPort: 80
  selector:
    name: result
