traefik.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30021
      name: web
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30042
      name: admin
  type: NodePort

# apiVersion: v1
# kind: Service
# metadata:
#   name: traefik-web-ui
#   namespace: kube-system
# spec:
#   selector:
#     k8s-app: traefik-ingress-lb
#   ports:
#   - port: 80
#     targetPort: 8080
#     nodePort: 30042
#   type: NodePort
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: traefik-web-ui
#   namespace: kube-system
#   annotations:
#     kubernetes.io/ingress.class: traefik
# spec:
#   rules:
#   - http:
#       paths:
#       - path:
#         backend:
#           serviceName: traefik-web-ui
#           servicePort: 30042
