poll.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: poll
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: poll
            servicePort: 80
